force-app/main/default/objects/SOLXYZCSO001__CSOAutoImage__c/SOLXYZCSO001__CSOAutoImage__c.object-meta.xml
<CustomObject>
    <label>CSOAutoImage</label>
    <nameField>
        <displayFormat>A-{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>CSO自動画像通番</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>