force-app/main/default/objects/SOLXYZCSO001__CSOAutoImage__c/fields/SOLXYZCSO001__ECMdocID__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ECMdocID__c</fullName>
    <label>Fleekdrive画像ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>