force-app/main/default/objects/SOLXYZCSO001__CSOAutoImage__c/fields/SOLXYZCSO001__Record__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__Record__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>レコード</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>