force-app/main/default/objects/SOLXYZCSO001__CSOAutoImage__c/fields/SOLXYZCSO001__type__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__type__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECM</fullName>
            </value>
            <value>
                <fullName>WR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>